# 2024-P1-v1dyut

./: README.md  endpoints.http  pyproject.toml
todo/: __init__.py
todo/views/: routes.py
